--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,7 @@
 .Header {
     height: 10vh;
     background-color: #001848;
-    color: #aeb0b1;
+    color: #f7f7f7;
     display: flex;
     align-items: center;
     padding: 0 2rem;
